# Mandelbrot

./: .gitignore  README.md  main.py  mandelbrot.py  pyproject.toml
src/mandelbrot/: main.py  mandelbrot.py
