[project]
name = "Mandelbrot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LeonHvastja", email = "LeonHvastja@users.noreply.github.com"},
]
dependencies = ["numpy>=2.3.2", "matplotlib>=3.10.5"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
